[gd_scene load_steps=4 format=3 uid="uid://cg38g5qetea2s"]

[ext_resource type="Script" uid="uid://c7xcnefxl82on" path="res://Scripts/UI/finalScreen.gd" id="1_sm6fy"]
[ext_resource type="Texture2D" uid="uid://dv7ryu32wteg3" path="res://Assets/Sprites/UI/finishLine.png" id="1_u24u8"]
[ext_resource type="FontFile" uid="uid://du1ji46cwnufr" path="res://Assets/Fonts/college/collegec.ttf" id="2_sm6fy"]

[node name="finalScreen" type="Node2D"]
script = ExtResource("1_sm6fy")

[node name="colorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.407569, 0.385846, 0.402562, 1)

[node name="finishLine" type="Sprite2D" parent="."]
position = Vector2(960, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="finishLine2" type="Sprite2D" parent="finishLine"]
position = Vector2(0, 128)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="finishLine3" type="Sprite2D" parent="finishLine/finishLine2"]
position = Vector2(0, 128)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="finishLine4" type="Sprite2D" parent="finishLine/finishLine2/finishLine3"]
position = Vector2(0, 128)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="finishLine5" type="Sprite2D" parent="finishLine/finishLine2/finishLine3/finishLine4"]
position = Vector2(0, 128)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="finishLine6" type="Sprite2D" parent="finishLine/finishLine2/finishLine3/finishLine4/finishLine5"]
position = Vector2(0, 128)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="colorRect2" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 116.0
color = Color(0.913725, 0.466667, 0.0470588, 1)

[node name="line2d" type="Line2D" parent="."]
points = PackedVector2Array(0, 116, 1920, 116)
default_color = Color(0, 0, 0, 1)

[node name="playerOneLabels" type="Label" parent="."]
offset_left = 275.0
offset_top = 336.0
offset_right = 723.0
offset_bottom = 437.0
theme_override_colors/font_color = Color(0.913725, 0.466667, 0.0470588, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 100
text = "player one"
horizontal_alignment = 1
vertical_alignment = 1

[node name="raceTime" type="Label" parent="playerOneLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = 75.5
offset_right = 313.0
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 75
text = "completion time: xx:xx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="coinsCollected" type="Label" parent="playerOneLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = 175.5
offset_right = 233.0
offset_bottom = 251.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 75
text = "Total coins colected: x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="overallPlacement" type="Label" parent="playerOneLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = 271.5
offset_right = 324.0
offset_bottom = 347.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 75
text = "overall placement: xth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="totalWins" type="Label" parent="playerOneLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = 359.5
offset_right = 324.0
offset_bottom = 435.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 75
text = "total wins: x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="newGameLabel" type="Label" parent="playerOneLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.0
offset_top = 516.5
offset_right = 463.0
offset_bottom = 592.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 60
text = "press start to start a new game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="playerTwoLabels" type="Label" parent="."]
offset_left = 1235.0
offset_top = 336.0
offset_right = 1683.0
offset_bottom = 437.0
theme_override_colors/font_color = Color(0.913725, 0.466667, 0.0470588, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 100
text = "player two"
horizontal_alignment = 1
vertical_alignment = 1

[node name="raceTime" type="Label" parent="playerTwoLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = 75.5
offset_right = 313.0
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 75
text = "completion time: xx:xx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="coinsCollected" type="Label" parent="playerTwoLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = 175.5
offset_right = 233.0
offset_bottom = 251.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 75
text = "total coins colected: x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="overallPlacement" type="Label" parent="playerTwoLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = 271.5
offset_right = 324.0
offset_bottom = 347.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 75
text = "overall placement: xth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="totalWins" type="Label" parent="playerTwoLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = 359.5
offset_right = 324.0
offset_bottom = 435.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 75
text = "total wins: x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="newGameLabel" type="Label" parent="playerTwoLabels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -441.0
offset_top = 516.5
offset_right = 471.0
offset_bottom = 592.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 60
text = "press start to start a new game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="finishLine3" type="Sprite2D" parent="."]
position = Vector2(1924, 54)
rotation = 1.5708
scale = Vector2(3.75, 3.82813)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="finishLine4" type="Sprite2D" parent="finishLine3"]
position = Vector2(0, 128)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="finishLine5" type="Sprite2D" parent="finishLine3/finishLine4"]
position = Vector2(0, 128)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="finishLine6" type="Sprite2D" parent="finishLine3/finishLine4/finishLine5"]
position = Vector2(0, 128)
texture = ExtResource("1_u24u8")
offset = Vector2(0, 64)

[node name="titleLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = -48.0
offset_right = 1936.0
offset_bottom = 481.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.765026, 0.384565, 0.0148376, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 20
theme_override_constants/shadow_offset_y = 11
theme_override_fonts/font = ExtResource("2_sm6fy")
theme_override_font_sizes/font_size = 200
text = "BLAZESHIFT
"
horizontal_alignment = 1
vertical_alignment = 1
